--- a/visis_bot/.env
+++ b/visis_bot/.env
@@ -1,4 +1,4 @@
-TELEGRAM_TOKEN=8537210071:AAEYE_PwyWz5WYDHsx_Sqa_lEqdGaF6HWVI
+TELEGRAM_TOKEN=
 OPENAI_API_KEY=
-
 OPENAI_BASE_URL=https://api.aitunnel.ru/v1
+
